--- a/styles/globals.css
+++ b/styles/globals.css
@@ -89,3 +89,18 @@ body {
   display: flex;
   align-items: center;
 }
+
+input[type="text"] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border-bottom: 3px solid #fff;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+}
+
+input[type="text"]:focus {
+  border-bottom: 3px solid #555;
+}
